<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@color/app_background"
    >
	
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <LinearLayout 
            android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="horizontal"
            >
            <com.gc.materialdesign.views.ButtonRectangle 
		        android:id="@+id/study_dialog_listen" 
                android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:layout_marginLeft="4dp"
		        android:layout_marginTop="4dp"
		    	android:text="@string/practice_dialog_listen"
		    	android:textColor="@color/text_dark"
		        android:background="@color/load_blue"
		        materialdesign:rippleSpeed="92"
		        />
            <com.gc.materialdesign.views.ButtonRectangle 
		        android:id="@+id/study_dialog_read"
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:layout_marginRight="4dp"
		        android:layout_marginTop="4dp"
		    	android:text="@string/practice_dialog_readafterme"
		    	android:textColor="@color/text_dark"
		        android:background="@color/load_blue"
		        materialdesign:rippleSpeed="92"
		        />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="horizontal"
            >
            <com.gc.materialdesign.views.ButtonRectangle 
		        android:id="@+id/study_dialog_rolea" 
                android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:layout_marginLeft="4dp"
		        android:layout_marginBottom="4dp"
		    	android:text="@string/practice_dialog_rolea"
		    	android:textColor="@color/text_dark"
		        android:background="@color/load_blue"
		        materialdesign:rippleSpeed="92"
		        />
            <com.gc.materialdesign.views.ButtonRectangle 
		        android:id="@+id/study_dialog_roleb" 
                android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:layout_marginRight="4dp"
		        android:layout_marginBottom="4dp"
		    	android:text="@string/practice_dialog_roleb"
		    	android:textColor="@color/text_dark"
		        android:background="@color/load_blue"
		        materialdesign:rippleSpeed="92"
		        />
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
