<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/padding_7"
    android:weightSum="10"
    >

    <FrameLayout 
        android:id="@+id/study_part1"
        android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="4" 
	    android:orientation="vertical"
	   	android:foreground="@drawable/framelayout_selector"
        >
        <TextView 
            android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:gravity="center"
	    	android:text="@string/introduction"
	    	android:textColor="@color/white"
	    	android:shadowDx="0.4"
	        android:shadowDy="0.4"
	        android:shadowRadius="0.4"
	        android:shadowColor="@color/white"
	    	android:textSize="@dimen/bigger"
	    	android:background="@color/style1_color1"
            />
        
    </FrameLayout>
    <FrameLayout 
        android:id="@+id/study_part2"
        android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="3" 
	    android:orientation="vertical"
	    android:layout_marginTop="@dimen/padding_7"
	   	android:foreground="@drawable/framelayout_selector"
        >
        <TextView 
            android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:gravity="center"
	    	android:text="@string/primary_lever"
	    	android:textColor="@color/white"
	    	android:shadowDx="0.4"
	        android:shadowDy="0.4"
	        android:shadowRadius="0.4"
	        android:shadowColor="@color/white"
	    	android:textSize="@dimen/bigger"
	    	android:background="@color/style1_color2"
            />
        
    </FrameLayout>
    <FrameLayout 
        android:id="@+id/study_part3"
        android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2" 
	    android:orientation="vertical"
	    android:layout_marginTop="@dimen/padding_7"
	   	android:foreground="@drawable/framelayout_selector"
        >
        <TextView 
            android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:gravity="center"
	    	android:text="@string/intermediate_lever"
	    	android:textColor="@color/white"
	    	android:shadowDx="0.4"
	        android:shadowDy="0.4"
	        android:shadowRadius="0.4"
	        android:shadowColor="@color/white"
	    	android:textSize="@dimen/bigger"
	    	android:background="@color/style1_color3"
            />
        
    </FrameLayout>
    
    <FrameLayout 
        android:id="@+id/study_part4"
        android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" 
	    android:orientation="vertical"
	    android:layout_marginTop="@dimen/padding_7"
	   	android:foreground="@drawable/framelayout_selector"
        >
        <TextView 
            android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:gravity="center"
	    	android:text="@string/fighting"
	    	android:textColor="@color/white"
	    	android:shadowDx="0.4"
	        android:shadowDy="0.4"
	        android:shadowRadius="0.4"
	        android:shadowColor="@color/white"
	    	android:textSize="@dimen/middle"
	    	android:background="@color/style1_color4"
            />
        
    </FrameLayout>

</LinearLayout>
