<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@color/app_background"
    >
	
    <TextView
        android:id="@+id/tranlate_title" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
    	android:textColor="@color/text_dark"
    	android:shadowDx="0.3"
        android:shadowDy="0.3"
        android:shadowRadius="0.3"
        android:shadowColor="@color/text_dark"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginTop="@dimen/padding_5"
        android:layout_marginRight="@dimen/padding_10"
    	android:textSize="@dimen/bigest"
    	android:text="@string/translate_content"
        />
    <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
	    <TextView
	        android:id="@+id/questiontv" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	    	android:textColor="@color/text_dark"
	    	android:shadowDx="0.3"
	        android:shadowDy="0.3"
	        android:shadowRadius="0.3"
	        android:shadowColor="@color/text_dark"
	        android:layout_marginLeft="@dimen/padding_10"
	        android:layout_marginTop="@dimen/padding_10"
	        android:layout_marginRight="@dimen/padding_10"
	    	android:textSize="@dimen/bigger"
	        />
        
        
    </FrameLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
       	<EditText 
       	    android:id="@+id/translate_input"
       	    android:layout_width="match_parent"
       	    android:layout_height="match_parent"
       	    android:layout_margin="@dimen/padding_10"
       	    android:padding="@dimen/padding_margin"
       	    android:textColor="@color/text_dark"
       	    android:textSize="@dimen/bigest"
       	    android:gravity="left"
            android:hint="@string/input_translate_hint"
            android:imeOptions="actionDone"
       	    android:background="@drawable/list_item_bg_white"
       	    />
    </LinearLayout>
    
    <com.gc.materialdesign.views.ButtonRectangle 
        xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
        android:id="@+id/check_btn"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:gravity="center"
    	android:text="@string/practice_check"
    	android:textColor="@color/white"
        android:textSize="@dimen/bigest"
        android:background="@color/green"
        android:layout_marginLeft="@dimen/padding_5"
        android:layout_marginRight="@dimen/padding_5"
        materialdesign:rippleSpeed="90"
        />
</LinearLayout>
